fix: 修复14个后端Bug + 新增React前端项目
Bug修复：
- OrderTimeoutConsumer: 库存回补改用原子addRemaining + 支持batchAllocations JSON
- OrderServiceImpl.sortComplete: 缺货商品回补批次库存
- ProductBatchServiceImpl.allocateFIFO: 并发安全多轮重试
- JwtAuthenticationFilter: 增加user:disabled Redis校验
- OrderServiceImpl.place: 校验商品上架状态 + 防负金额
- PickupTimeoutScheduler: 重写，逐单回补库存+释放优惠券+原子状态更新
- CartServiceImpl.add: Redis HINCRBY原子自增
- MockPaymentServiceImpl.pay/OrderServiceImpl.accept/cancel: 原子UPDATE防并发
- DeliveryServiceImpl.grab: 增加配送类型校验
- AuthController.register: 增加@RateLimit限流
- CartAddDTO.quantity: 增加@Max(999)上限

前端新增：
- React 18 + TypeScript + Vite + Tailwind CSS + React Router
- 8个页面：登录/注册/首页/商品详情/购物车/下单/订单列表/订单详情
- API层：Axios封装(JWT自动注入+401拦截) + 5个业务模块
- 文档更新：devlog.md + project-structure.md

Co-Authored-By: Claude <noreply@anthropic.com>